added media quary specs for max-width: 768px

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         />
         <!-- Main Styles -->
         <link rel="stylesheet" href="./css/style.css" />
+        <!--Media Quary-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <!--
